fixed alignments on search result page

--- a/app/assets/stylesheets/search.css.less
+++ b/app/assets/stylesheets/search.css.less
@@ -73,7 +73,7 @@
         
         > .title{
           line-height: 1em;          
-          margin: 12px 0 6px;
+          margin: 6px 0 6px;
           font-size:19px;
           width: 375px;
         }
@@ -147,7 +147,7 @@
       .price.data-block{
         float: right;        
         text-align: right;  
-        padding: 15px 5px 0 0;
+        padding: 6px 6px 0 0;
         .figure{  
           font-size: 28px;        
           font-weight: bold;
